<resources>
    <string name="app_name">学生端</string>
    <string name="title_activity_login">登陆</string>
    <!-- Strings related to login -->
    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="old_password">原密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_confirm">确定</string>
    <string name="action_change_password">修改密码</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">密码格式错误</string>
    <string name="error_invalid_old_password">原密码格式错误</string>
    <string name="error_invalid_new_password">新密码格式错误</string>
    <string name="error_invalid_sure_password">确认密码格式错误</string>
    <string name="error_invalid_unlike">两次密码输入不一致</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">用户名不能为空</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
